--- a/install
+++ b/install
@@ -1,91 +1,68 @@
 #!/usr/bin/env bash
 
-source "./src/lib/variables.sh"
-source "./src/lib/helpers.sh"
+clear
+set -euo pipefail
 
-source "./src/prompt/01-start.sh"
-source "./src/prompt/02-timezone.sh"
-source "./src/prompt/03-kernel.sh"
-source "./src/prompt/04-user.sh"
-source "./src/prompt/05-password.sh"
-source "./src/prompt/06-hostname.sh"
-source "./src/prompt/07-efi_partition.sh"
-source "./src/prompt/08-root_partition.sh"
-source "./src/prompt/09-swap.sh"
-source "./src/prompt/10-extra_disk.sh"
-source "./src/prompt/11-bootloader.sh"
-source "./src/prompt/summary.sh"
+source "./lib/log.sh"
+source "./lib/helpers.sh"
+source "./lib/prompt.sh"
 
-source "./src/prep.sh"
-source "./src/package.sh"
-source "./src/locale.sh"
-source "./src/network.sh"
-source "./src/adduser.sh"
-source "./src/bootloader.sh"
+source "./menu.sh"
+source "./mirror.sh"
+source "./format_partition.sh"
+source "./package.sh"
+source "./locale.sh"
+source "./network.sh"
+source "./adduser.sh"
+source "./pacman.sh"
+source "./swap.sh"
+source "./storage.sh"
+source "./bootloader.sh"
+source "./hibernation.sh"
 
-source "./src/swap.sh"
-source "./src/hibernation.sh"
-source "./src/package_config.sh"
-source "./src/powerbutton.sh"
-source "./src/extra_disk.sh"
-source "./src/plymouth.sh"
-source "./src/ssh.sh"
+CPU_VENDOR=$(lscpu | grep "^Vendor ID" | awk '{print $3}')
 
-set -e
+export CPU_VENDOR
+export ROOT_MOUNTPOINT="/mnt"
+export ESP_MOUNTPOINT="$ROOT_MOUNTPOINT/boot"
 
-if [[ $EUID -ne 0 ]]; then
-    echo "This script must be run as root. Exiting."
+timezone
+efi_partition
+root_partition
+storage
+swap
+username
+root_password
+user_password
+kernel
+if [[ "${SWAP_METHOD}" -eq "1" ]]; then
+    bootloader
+fi
+summary
+
+if ! [[ "${CONFIRM_INSTALL}" =~ [Yy] ]]; then
+    clear
+    print_color "${GREEN}" "Good bye.\n"
     exit 1
 fi
 
-start(){
-    prep
-    package
-    locale
-    network
-    adduser
-    bootloader
-}
+clear
+setting_mirror
+format_partition
+install_package
+setting_locale
+setting_network
+adduser
+setting_pacman
+setting_swap
+setting_storage
+install_bootloader
+# setting_hibernation
 
-settings(){
-    setting_swap
-    setting_hibernation
-    # powerbutton
-    setting_package_config
-    setting_extra_disk
-    setting_plymouth
-    setting_ssh
-}
+arch-chroot "${ROOT_MOUNTPOINT}" mkinitcpio -P
 
-end(){
-    if [[ "$BOOTLOADER" == "1" ]]; then
-        arch-chroot $MOUNT_POINT grub-mkconfig -o /boot/grub/grub.cfg
-    fi
-    arch-chroot $MOUNT_POINT mkinitcpio -P
-    genfstab -t UUID $MOUNT_POINT >>$MOUNT_POINT/etc/fstab
-}
+echo "# <file system> <dir> <type> <options> <dump> <pass>" | tee "${ROOT_MOUNTPOINT}"/etc/fstab &>/dev/null
+genfstab -t UUID "${ROOT_MOUNTPOINT}" >>"${ROOT_MOUNTPOINT}"/etc/fstab
 
-start_prompt
-timezone_prompt
-kernel_prompt
-user_prompt
-password_prompt
-hostname_prompt
-efi_partition_prompt
-root_partition_prompt
-extradisk_prompt
-swap_prompt
-bootloader_prompt
-print_summary
-
-if [[ ! "$PROCEED" =~ [Nn] ]]; then
-    start
-    settings
-    end
-
-    clear
-    print_color $GREEN "Install success\n"
-else
-    clear
-    print_color $YELLOW "Bye\n"
-fi
+clear
+success "Installing arch"
