--- a/install
+++ b/install
@@ -63,5 +63,7 @@ install_bootloader
 # arch-chroot "${ROOT_MOUNTPOINT}" mkinitcpio -P
 setting_storage
 
+umount -Rf /mnt
+
 clear
 success "Installing arch"
