--- a/install
+++ b/install
@@ -31,20 +31,20 @@ hostname
 root_password
 username
 user_password
+kernel
+swap_method
+if [[ "$SWAP_METHOD" -eq "1" ]]; then
+	bootloader
+fi
 efi_partition
 root_partition
-storage
 swap
-kernel
-if [[ "${SWAP_METHOD}" -eq "1" ]]; then
-    bootloader
-fi
 summary
 
-if ! [[ "${CONFIRM_INSTALL}" =~ [Yy] ]]; then
-    clear
-    print_color "${GREEN}" "Good bye.\n"
-    exit 1
+if ! [[ "$CONFIRM_INSTALL" =~ [Yy] ]]; then
+	clear
+	print_color "$GREEN" "Good bye.\n"
+	exit 1
 fi
 
 clear
